--- a/css/footer.css
+++ b/css/footer.css
@@ -4,28 +4,7 @@ footer {
   background-color: #2c3e50;
   color: #bdc3c7;
   padding: 20px 0;
-}
-
-footer .container {
-  width: 80%;
-  margin: 0 auto;
   text-align: center;
-}
-
-footer p {
-  margin: 0;
-}
-
-footer .social-media {
-  margin-top: 10px;
-}
-
-footer .social-media a {
-  color: #bdc3c7;
-  text-decoration: none;
-  margin: 0 5px;
-}
-
-footer .social-media a:hover {
-  text-decoration: underline;
+  margin: 10px 10px;
+  border-radius: 20px;
 }
