--- a/css/header.css
+++ b/css/header.css
@@ -2,20 +2,19 @@
 
 header {
   background-color: #2c3e50;
-  padding: 20px 0;
+  color: #ecf0f1;
+  padding: 10px 0;
+  text-align: center;
+  margin: 10px 10px;
+  border-radius: 20px;
 }
 
 header .container {
   width: 80%;
-  margin: 0 auto;
+  margin: 10px auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-header h1 {
-  color: #ecf0f1;
-  margin: 0;
 }
 
 header nav ul {
